[package]
name = "bao-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["full"] }

[dev-dependencies]
hex = "0.4.3"
bao = "0.12.1"
proptest = "1.0.0"
rand = "0.8.5"
tokio = "1.24.1"
